--- a/index.html
+++ b/index.html
@@ -1,80 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home | Hajar Zemzem</title>
+	<title>Hajar Zemzem</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
 </head>
 <body>
-		<nav class="navbar navbar-default">
-		  <div class="container">
-		    <div class="navbar-header">
-		      <a class="navbar-brand" href="#">Hajar Zemzem</a>
-		    </div>
-		    <ul class="nav navbar-nav">
-		      <li><a href="index.html">About</a></li>
-		      <li><a href="portfolio.html">Portfolio</a></li>
-		      <li><a href="contact.html">Contact</a></li>
-		    </ul>
-		  </div>
-		</nav>
-
-<!-- ----------------------------------------------------------------------------------- -->
-
-		<div id="main-container">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8">
-						<h1>About Me</h1>
-					</div>
-					<div class="col-md-3">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title">Sidebar</h3>
-							</div>
-							<div class="panel-body">
-							    <a href="#"><img src="assets/images/github-128.png" class="icons" alt="GitHub" /></a>
-						        <a href="#"><img src="assets/images/linkedin-128.png" class="icons" alt="LinkedIn" /></a>
-						        <a href="#"><img src="assets/images/stackoverflow-128.png" class="icons" alt="Stack Overflow" /></a>
-							</div>
-						</div>
-					</div>
+<div class="wrapper">
+	<nav>
+		<div class="container">
+			<div class="row navbar">
+				<div class="col-md-3 navbar-header text-center col-xs-12 col-sm-4">
+					<h1>Hajar Zemzem</h1>
 				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8">
-						<img src="assets/images/gigi.jpg" class="index-photo" alt="Gigi">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod sapiente accusamus tempora, libero minus doloremque assumenda beatae quas laboriosam nisi modi soluta quisquam vero, cum. Ex minus quod debitis voluptatibus.
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus mollitia obcaecati debitis doloremque expedita ratione ut itaque quis tempore at!
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus labore ab error repudiandae eaque, at placeat ea ut dolore, earum, magni, iste explicabo obcaecati reprehenderit nesciunt illo ducimus necessitatibus culpa!
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, quibusdam dignissimos nostrum id eum explicabo praesentium voluptatum ipsa laudantium magni laborum placeat dolor cupiditate est, ea ex neque eligendi voluptatem dolores quaerat, ullam, natus iusto totam deleniti. Repellat rerum, explicabo!
-						</p>
-					</div>
+				<div class="col-md-3 col-md-offset-6 col-xs-5 col-xs-offset-3 col-sm-5 col-sm-offset-3">
+					<ul class="navbar-nav v-align navbar-right">
+						<li class="nav-item"><a href="index.html">About</a></li>
+						<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+						<li class="nav-item"><a href="contact.html">Contact</a></li>
+					</ul>
 				</div>
-			</div>
+			</div>			
 		</div>
+	</nav>
 
-<!-- ----------------------------------------------------------------------------------- -->
-
-		<div id="footer">
-			<div class="panel panel-default">
-	          <div class="panel-body">
-	            <div class="text-center">
-	            	Copyright &copy; 2016 Hajar Zemzem
-	            </div>
-	          </div>
-	        </div>
-	    </div>
+	<div class="container">
+		<div class="row">
+			<section class="col-md-7">
+				<h2>About Me!</h2>
+				<img src="assets/images/gigi.jpg" class="img-responsive" height="250px" width="250px">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima provident inventore necessitatibus maiores eum nam sint earum praesentium reiciendis aut ad debitis, ipsum delectus vero libero at distinctio. Unde magni aperiam delectus nihil iure, autem odit doloribus esse ab eaque exercitationem, dignissimos, aliquam atque illo sequi animi ipsam ea distinctio.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum laborum nobis quaerat blanditiis unde, inventore vero quidem quae id officia. Quis ab impedit doloribus, optio earum perferendis nostrum minima ipsum temporibus provident architecto, ex placeat dolorem consequatur quo necessitatibusus quidem delectus consequuntur veniam! Maxime sequi neque voluptatem, qui eaque.
+				</p>
+			</section>
+			<aside  class="col-md-3 col-md-offset-2">
+				<h3>Connect With Me</h3>
+				<div class="text-center">
+					<a href="#"><img src="assets/images/github-128.png" alt="Github" width="62" height="62"></a>
+					<a href="#"><img src="assets/images/linkedin-128.png" alt="Linkedin" width="62" height="62"></a>
+					<a href="#"><img src="assets/images/stackoverflow-128.png" alt="Stack Overflow" width="62" height="62"></a>
+				</div>
+			</aside>
+		</div>
+	</div>
+	</div>
+	<footer class="footer">
+		<div class="container">
+			<p class="text-center">Copyright &copy; 2017 Hajar Zemzem</p>
+		</div>
+	</footer>
 </body>
 </html>
