--- a/index.html
+++ b/index.html
@@ -10,27 +10,24 @@
 <body>
 <div class="wrapper">
 	<nav>
-		<div class="container">
-			<div class="row navbar">
-				<div class="col-md-3 navbar-header text-center col-xs-12 col-sm-4">
-					<h1>Hajar Zemzem</h1>
-				</div>
-				<div class="col-md-3 col-md-offset-6 col-xs-5 col-xs-offset-3 col-sm-5 col-sm-offset-3">
-					<ul class="navbar-nav v-align navbar-right">
-						<li class="nav-item"><a href="index.html">About</a></li>
-						<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-						<li class="nav-item"><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>			
-		</div>
-	</nav>
+        <div class="container">
+            <div class="navbar-header text-center col-xs-12 col-sm-4">
+                <h1>Hajar Zemzem</h1>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-sm-offset-2">
+                <ul class="navbar-nav navbar-right">
+                    <li class="nav-item"><a href="index.html">About</a></li>
+                    <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>        
+    </nav>
 
 	<div class="container">
 		<div class="row">
 			<section class="col-md-7">
 				<h2>About Me!</h2>
-				<img src="assets/images/gigi.jpg" class="img-responsive" height="250px" width="250px">
+				<img src="assets/images/gigi.jpg" class="img-responsive" alt="Gigi" height="250" width="250">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima provident inventore necessitatibus maiores eum nam sint earum praesentium reiciendis aut ad debitis, ipsum delectus vero libero at distinctio. Unde magni aperiam delectus nihil iure, autem odit doloribus esse ab eaque exercitationem, dignissimos, aliquam atque illo sequi animi ipsam ea distinctio.
 				</p>
