--- a/contact.html
+++ b/contact.html
@@ -10,21 +10,18 @@
 <body>
 <div class="wrapper">
 	<nav>
-		<div class="container">
-			<div class="row navbar">
-				<div class="col-md-3 navbar-header text-center col-xs-12 col-sm-4">
-					<h1>Hajar Zemzem</h1>
-				</div>
-				<div class="col-md-3 col-md-offset-6 col-xs-5 col-xs-offset-3 col-sm-5 col-sm-offset-3">
-					<ul class="navbar-nav v-align navbar-right">
-						<li class="nav-item"><a href="index.html">About</a></li>
-						<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-						<li class="nav-item"><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>			
-		</div>
-	</nav>
+        <div class="container">
+            <div class="navbar-header text-center col-xs-12 col-sm-4">
+                <h1>Hajar Zemzem</h1>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-sm-offset-2">
+                <ul class="navbar-nav navbar-right">
+                    <li class="nav-item"><a href="index.html">About</a></li>
+                    <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>        
+    </nav>
 
 	<div class="container">
 		<div class="row">
@@ -41,7 +38,8 @@
 					  </div>
 					  <label for="text">Message</label>
 					  <textarea class="form-control" rows="3" placeholder="Type your message here..."></textarea>
-					  <button type="submit" class="btn btn-default">Submit</button>
+					  <br>
+					  <button type="submit" class="btn">Submit</button>
 				</form>
 			</section>
 			<aside  class="col-md-3 col-md-offset-2">
