--- a/portfolio.html
+++ b/portfolio.html
@@ -10,36 +10,33 @@
 <body>
 <div class="wrapper">
 	<nav>
-		<div class="container">
-			<div class="row navbar">
-				<div class="col-md-3 navbar-header text-center col-xs-12 col-sm-4">
-					<h1>Hajar Zemzem</h1>
-				</div>
-				<div class="col-md-3 col-md-offset-6 col-xs-5 col-xs-offset-3 col-sm-5 col-sm-offset-3">
-					<ul class="navbar-nav v-align navbar-right">
-						<li class="nav-item"><a href="index.html">About</a></li>
-						<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-						<li class="nav-item"><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>			
-		</div>
-	</nav>
+        <div class="container">
+            <div class="navbar-header text-center col-xs-12 col-sm-4">
+                <h1>Hajar Zemzem</h1>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-sm-offset-2">
+                <ul class="navbar-nav navbar-right">
+                    <li class="nav-item"><a href="index.html">About</a></li>
+                    <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>        
+    </nav>
 
 	<div class="container">
 		<div class="row">
 			<section class="col-md-7 gallery">
 				<h2>Portfolio</h2>
 					<div class="row">
-						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-1.jpg" alt="background image" class="img-responsive"><div class="float"><h4>Hangman</h4></div></div>
-						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-2.jpg" alt="background image" class="img-responsive"><div class="float"><h4>RPG Game</h4></div></div>
+						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-1.jpg" alt="background image" class="img-responsive"><div class="gall"><h4>Hangman</h4></div></div>
+						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-2.jpg" alt="background image" class="img-responsive"><div class="gall"><h4>RPG Game</h4></div></div>
 					</div>
-					<div class="row clear">
-						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-5.jpg" alt="background image" class="img-responsive"><div class="float"><h4>Trivia Game</h4></div></div>
-						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-7.jpg" alt="background image" class="img-responsive"><div class="float"><h4>Rutgers Info Widget</h4></div></div>
+					<div class="row ga">
+						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-5.jpg" alt="background image" class="img-responsive"><div class="gall"><h4>Trivia Game</h4></div></div>
+						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-7.jpg" alt="background image" class="img-responsive"><div class="gall"><h4>Rutgers Info Widget</h4></div></div>
 					</div>
-					<div class="row clear">
-						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-9.jpg" alt="background image" class="img-responsive"><div class="float"><h4>Rock Paper Scissors</h4></div></div>
+					<div class="row ga">
+						<div class="col-xs-6 image-container"><img src="assets/images/technics-q-c-640-480-9.jpg" alt="background image" class="img-responsive"><div class="gall"><h4>Rock Paper Scissors</h4></div></div>
 					</div>
 			</section>
 			<aside  class="col-md-3 col-md-offset-2">
