--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Hajar Zemzem</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="Assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="Assets/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
 </head>
 <body>
@@ -27,7 +27,7 @@
 		<div class="row">
 			<section class="col-md-7">
 				<h2>About Me!</h2>
-				<img src="assets/images/gigi.jpg" class="img-responsive" alt="Gigi" height="250" width="250">
+				<img src="Assets/images/gigi.jpg" class="img-responsive" alt="Gigi" height="250" width="250">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima provident inventore necessitatibus maiores eum nam sint earum praesentium reiciendis aut ad debitis, ipsum delectus vero libero at distinctio. Unde magni aperiam delectus nihil iure, autem odit doloribus esse ab eaque exercitationem, dignissimos, aliquam atque illo sequi animi ipsam ea distinctio.
 				</p>
@@ -38,9 +38,9 @@
 			<aside  class="col-md-3 col-md-offset-2">
 				<h3>Connect With Me</h3>
 				<div class="text-center">
-					<a href="#"><img src="assets/images/github-128.png" alt="Github" width="62" height="62"></a>
-					<a href="#"><img src="assets/images/linkedin-128.png" alt="Linkedin" width="62" height="62"></a>
-					<a href="#"><img src="assets/images/stackoverflow-128.png" alt="Stack Overflow" width="62" height="62"></a>
+					<a href="#"><img src="Assets/images/github-128.png" alt="Github" width="62" height="62"></a>
+					<a href="#"><img src="Assets/images/linkedin-128.png" alt="Linkedin" width="62" height="62"></a>
+					<a href="#"><img src="Assets/images/stackoverflow-128.png" alt="Stack Overflow" width="62" height="62"></a>
 				</div>
 			</aside>
 		</div>
