last commit woohoo

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<nav>
         <div class="container">
             <div class="navbar-header text-center col-xs-12 col-sm-4">
-                <h1>Hajar Zemzem</h1>
+                <h1 id="logo">Hajar Zemzem</h1>
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-2">
                 <ul class="navbar-nav navbar-right">
@@ -26,7 +26,7 @@
 	<div class="container">
 		<div class="row">
 			<section class="col-md-7">
-				<h2>Contact Me</h2>
+				<h2 id="title">Contact Me</h2>
 				<form>
 					  <div class="form-group">
 					    <label for="text">Name</label>
@@ -43,7 +43,7 @@
 				</form>
 			</section>
 			<aside  class="col-md-3 col-md-offset-2">
-				<h3>Connect With Me</h3>
+				<h3 id="title">Connect With Me</h3>
 				<div class="text-center">
 					<a href="#"><img src="Assets/images/github-128.png" alt="Github" width="62" height="62"></a>
 					<a href="#"><img src="Assets/images/linkedin-128.png" alt="Linkedin" width="62" height="62"></a>
