--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<nav>
         <div class="container">
             <div class="navbar-header text-center col-xs-12 col-sm-4">
-                <h1>Hajar Zemzem</h1>
+                <h1 id="logo">Hajar Zemzem</h1>
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-2">
                 <ul class="navbar-nav navbar-right">
@@ -26,17 +26,20 @@
 	<div class="container">
 		<div class="row">
 			<section class="col-md-7">
-				<h2>About Me!</h2>
-				<img src="Assets/images/gigi.jpg" class="img-responsive" alt="Gigi" height="250" width="250">
-				<p>
+				<h2 id="title">About Me!</h2>
+				<img src="Assets/images/gigi.jpg" class="img-responsive col-md-5 profile" alt="Gigi" height="250" width="250">
+				<p id="bio">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima provident inventore necessitatibus maiores eum nam sint earum praesentium reiciendis aut ad debitis, ipsum delectus vero libero at distinctio. Unde magni aperiam delectus nihil iure, autem odit doloribus esse ab eaque exercitationem, dignissimos, aliquam atque illo sequi animi ipsam ea distinctio.
 				</p>
-				<p>
+				<p id="bio">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ipsum laborum nobis quaerat blanditiis unde, inventore vero quidem quae id officia. Quis ab impedit doloribus, optio earum perferendis nostrum minima ipsum temporibus provident architecto, ex placeat dolorem consequatur quo necessitatibusus quidem delectus consequuntur veniam! Maxime sequi neque voluptatem, qui eaque.
+				</p>
+				<p >
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis quas voluptate enim incidunt dolorem itaque explicabo quisquam saepe consequatur natus.
 				</p>
 			</section>
 			<aside  class="col-md-3 col-md-offset-2">
-				<h3>Connect With Me</h3>
+				<h3 id="title">Connect With Me</h3>
 				<div class="text-center">
 					<a href="#"><img src="Assets/images/github-128.png" alt="Github" width="62" height="62"></a>
 					<a href="#"><img src="Assets/images/linkedin-128.png" alt="Linkedin" width="62" height="62"></a>
